--- a/style.css
+++ b/style.css
@@ -2,4 +2,83 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Rubik', sans-serif;
+}
+
+h1 {
+    text-align: center;
+    font-size: 3rem;
+}
+
+span {
+    color: aqua;
+}
+
+form {
+    width: 80%;
+    margin: 0 auto;
+}
+
+form label {
+    display: inline-block;
+    margin-bottom: 5px;
+}
+
+form input {
+    display: block;
+    width: 100%;
+    border: 2px solid lightgrey;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 15px;
+}
+
+input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: aqua;
+    border: 2px solid aqua;
+    color: white;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color .3s ease-in;
+}
+
+input[type="submit"]:hover {
+    background-color: white;
+    color: aqua;
+}
+
+.table {
+    border-collapse: collapse;
+    margin: 0 auto;
+    /* margin: 25px 0; */
+    margin-top: 10px;
+    min-width: 400px;
+    width: 80%;
+    font-size: .9em;
+}
+
+.table thead tr {
+    background-color: white;
+    text-align: left;
+}
+
+.table th {
+    padding: 10px;
+    box-shadow: 0px 1px 4px rgba(8, 35, 48, 0.24);
+    border: none;
+}
+
+.table td {
+    padding: 10px;
+    box-shadow: 0px 2px 4px rgba(8, 35, 48, 0.24);
+    border: none;
+}
+
+.table img {
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
 }
