--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ input[type="submit"]:hover {
 
 .table td {
     padding: 10px;
-    box-shadow: 0px 2px 4px rgba(8, 35, 48, 0.24);
+    box-shadow: 0px 1px 4px rgb(2, 16, 22);
     border: none;
     background-color: lightgrey;
 }
@@ -82,4 +82,10 @@ input[type="submit"]:hover {
     width: 40px;
     height: 40px;
     border-radius: 100%;
+}
+
+.danger {
+    padding: 5px 10px;
+    background-color: red;
+    color: white;
 }
